firefox bug fixed, remove bounding box on tap on iOS

--- a/src/css/modules/_cartogram.scss
+++ b/src/css/modules/_cartogram.scss
@@ -17,6 +17,10 @@
 .cartogram {
     position: relative;
     height: 642px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+.cartogram * {
+    -webkit-tap-highlight-color: inherit;
 }
 .center {
     position: relative;
